# EducationAlgorithms

./: README.md  cat.js  itemResponse.js  sites.json  spaceRep.js  sports.json  test.js
THEALGORITHMS/IRT_Resources/oscats-0.6 2/: AUTHORS  COPYING  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.in  oscats.pc.in
THEALGORITHMS/IRT_Resources/oscats-0.6 2/bindings/: Makefile.am  Makefile.in  oscats-common.defs
THEALGORITHMS/IRT_Resources/oscats-0.6 2/bindings/java/: LICENSE  Makefile.am  Makefile.in  oscats-java.defs
THEALGORITHMS/IRT_Resources/oscats-0.6 2/bindings/java/generator/: BindingsGenerator.java  definitions.py  generator.files
THEALGORITHMS/IRT_Resources/oscats-0.6 2/bindings/java/generator/com/operationaldynamics/codegen/: ArrayThing.java  BlacklistedThing.java  BoxedGenerator.java  BoxedThing.java  EntityGenerator.java  EntityThing.java  EnumGenerator.java  EnumThing.java  (+12 more)
THEALGORITHMS/IRT_Resources/oscats-0.6 2/bindings/java/jni/: bindings_java.h  bindings_java_memory.c  bindings_java_signal.c  bindings_java_threads.c  bindings_java_util.c  oscats_glib_GlibMisc.h
THEALGORITHMS/IRT_Resources/oscats-0.6 2/bindings/java/oscats/: Administrand.java  AlgAstrat.java  AlgChooser.java  AlgClassRates.java  AlgClosestDiff.java  AlgEstimate.java  AlgExposureCounter.java  AlgFixedLength.java  AlgMaxFisher.java  AlgMaxKl.java  AlgPickRand.java  AlgSimulate.java  AlgStratify.java  Algorithm.java  BitArray.java  Covariates.java  Examinee.java  GslMatrix.java  GslPermutation.java  GslVector.java  Integrate.java  Item.java  ItemBank.java  Model.java  ModelDina.java  ModelGpc.java  ModelGr.java  ModelHetlgr.java  ModelL1p.java  ModelL2p.java  ModelL3p.java  ModelNida.java  ModelNominal.java  ModelPc.java  OscatsAdministrandOverride.c  OscatsAdministrandOverride.java  OscatsExamineeOverride.c  OscatsExamineeOverride.java  Plumbing.java  Point.java  (+5 more)
THEALGORITHMS/IRT_Resources/oscats-0.6 2/bindings/java/oscats/bindings/: BlacklistedMethodError.java  Constant.java  Debug.java  DoubleConstant.java  Environment.c  Environment.java  FIXME.java  FatalError.java  Flag.java  Internationalization.c  Internationalization.java  Plumbing.c  Plumbing.java  Pointer.java  Proxy.java  Time.c  Time.java  Version.java
THEALGORITHMS/IRT_Resources/oscats-0.6 2/bindings/java/oscats/glib/: Boxed.java  FatalError.java  GBoxed.c  GBoxed.java  GObject.c  GObject.java  GValue.c  GValue.java  Glib.java  GlibException.java  GlibMisc.c  GlibMisc.java  Object.java  Plumbing-glib.c  Plumbing.java  Signal.java  Value.java  glib.typeMapping
THEALGORITHMS/IRT_Resources/oscats-0.6 2/bindings/perl/: Build.PL.in  Makefile.am  Makefile.in  codegen.pl  oscats-typedefs.typemap  oscats.override  oscats.pm.in
THEALGORITHMS/IRT_Resources/oscats-0.6 2/bindings/php/: LICENSE  Makefile.am  Makefile.in  oscats.overrides  php_gtk.h  php_gtk_module.h  php_oscats.c
THEALGORITHMS/IRT_Resources/oscats-0.6 2/bindings/php/generator/: Getopt.php  Makefile.am  Makefile.in  arg_types.php  definitions.php  doc_templates.php  docgen.php  docmerger.php  generator.php  override.php  scheme.php  templates.php
THEALGORITHMS/IRT_Resources/oscats-0.6 2/bindings/python/: LICENSE  Makefile.am  Makefile.in  oscats-py.defs  oscats.override  oscatsmodule.c  pyalgorithm.c  pyalgorithm.h
THEALGORITHMS/IRT_Resources/oscats-0.6 2/bindings/python/codegen/: Makefile.am  Makefile.in  argtypes.py  h2def.py
THEALGORITHMS/IRT_Resources/oscats-0.6 2/config/: getsp.java
THEALGORITHMS/IRT_Resources/oscats-0.6 2/doc/: Makefile.am  Makefile.in
THEALGORITHMS/IRT_Resources/oscats-0.6 2/doc/liboscats/: Makefile.am  Makefile.in  bindings.xml  build.xml  hacking.xml  intro.xml  liboscats-docs.sgml  liboscats-sections.txt
THEALGORITHMS/IRT_Resources/oscats-0.6 2/doc/liboscats/html/: GBitArray.html  OscatsAdministrand.html  OscatsAlgAstrat.html  OscatsAlgChooser.html  OscatsAlgClassRates.html  OscatsAlgClosestDiff.html  OscatsAlgEstimate.html  OscatsAlgExposureCounter.html  OscatsAlgFixedLength.html  OscatsAlgMaxFisher.html  OscatsAlgMaxKl.html  OscatsAlgPickRand.html  OscatsAlgSimulate.html  OscatsAlgStratify.html  OscatsAlgorithm.html  OscatsCovariates.html  OscatsExaminee.html  OscatsIntegrate.html  OscatsItem.html  OscatsItemBank.html  OscatsModel.html  OscatsModelDina.html  OscatsModelGpc.html  OscatsModelGr.html  OscatsModelHetlgr.html  OscatsModelL1p.html  OscatsModelL2p.html  OscatsModelL3p.html  OscatsModelNida.html  OscatsModelNominal.html  OscatsModelPc.html  OscatsPoint.html  OscatsSpace.html  OscatsTest.html  annotation-glossary.html  api-index-full.html  ch01.html  ch02.html  ch02s02.html  ch02s03.html  (+24 more)
THEALGORITHMS/IRT_Resources/oscats-0.6 2/examples/: Makefile.am  Makefile.in  README  ex01.c  ex01.java  ex01.php  ex01.pl  ex01.py  ex01_java.m  ex02.c  ex02.java  ex02.php  ex02.pl  ex02.py  ex02_java.m  ex03.c  ex03.py  ex04.py
THEALGORITHMS/IRT_Resources/oscats-0.6 2/m4/: java.m4  php.m4  python.m4
THEALGORITHMS/IRT_Resources/oscats-0.6 2/src/: Makefile.am  Makefile.in
THEALGORITHMS/IRT_Resources/oscats-0.6 2/src/liboscats/: Makefile.am  Makefile.in  administrand.c  administrand.h  algorithm.c  algorithm.h  algorithms.h  bitarray.c  bitarray.h  covariates.c  covariates.h  examinee.c  examinee.h  gsl.c  gsl.h  integrate.c  integrate.h  item.c  item.h  itembank.c  itembank.h  marshal.c  marshal.h  model.c  model.h  models.h  oscats.h  point.c  point.h  random.c  random.h  space.c  space.h  test.c  test.h
THEALGORITHMS/IRT_Resources/oscats-0.6 2/src/liboscats/algorithms/: astrat.c  astrat.h  chooser.c  chooser.h  class_rates.c  class_rates.h  closest_diff.c  closest_diff.h  estimate.c  estimate.h  exposure_counter.c  exposure_counter.h  fixed_length.c  fixed_length.h  max_fisher.c  max_fisher.h  max_kl.c  max_kl.h  pick_rand.c  pick_rand.h  simulate.c  simulate.h  stratify.c  stratify.h
THEALGORITHMS/IRT_Resources/oscats-0.6 2/src/liboscats/models/: dina.c  dina.h  gpc.c  gpc.h  gr.c  gr.h  hlgr.c  hlgr.h  l1p.c  l1p.h  l2p.c  l2p.h  l3p.c  l3p.h  nida.c  nida.h  nominal.c  nominal.h  pc.c  pc.h
(+164 files in other folders)
