## Makefile.am -- Process this file with automake to produce Makefile.in

EXTRA_DIST = Getopt.php arg_types.php array_printf.php definitions.php	\
	doc_templates.php docgen.php docgen_enum.php docmerger.php	\
	docmerger2.php generator.php lineoutput.php merge_defs.php	\
	missing_defs.php override.php reflection.php 			\
	reflection_class_checker.php scheme.php templates.php
